Correção da barra de ligações. Hiperligação para o relatório está corrigida.

--- a/analiseliteratura.html
+++ b/analiseliteratura.html
@@ -37,15 +37,15 @@
 					</li>
 
 					<li class="nav-item active">
-						<a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
-					</li>
-
-					<li class="nav-item active">
 						<a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
 					</li>
 					
 					<li class="nav-item active">
 						<a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
+					</li>
+
+					<li class="nav-item active">
+						<a class="nav-link" href="./Relatorio_LB_grupo_6.pdf">Relatório &nbsp &nbsp &nbsp</a>
 					</li>
 
 				</ul>
@@ -55,10 +55,7 @@
 
 	<br>
 	<br>
-	<br>
-	<br>
-
-    <center><h3> Análise de Literatura </h3></center>
+	<br>    <center><h3> Análise de Literatura </h3></center>
 
     <p> &nbsp &nbsp &nbsp Primeiramente, começou-se por automatizar a seleção dos artigos relevantes que permitiam conhecer melhor o organismo, via metabólica e genes de interesse para o grupo. Esta automatização foi realizada com recurso ao Biopython que permitiu uma pesquisa rápida e eficiente na plataforma Pubmed. Assim desenvolveram-se duas funções: uma que permite obter o número de artigos disponíveis relacionados com termo colocado como argumento e outra que permite obter outras informações (como autor, título, etc) importantes para identificação dos artigos relevantes.  </p>
 
