--- a/alinhamento.html
+++ b/alinhamento.html
@@ -37,15 +37,15 @@
 					</li>
 
 					<li class="nav-item active">
-						<a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
-					</li>
-
-					<li class="nav-item active">
 						<a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
 					</li>
 					
 					<li class="nav-item active">
 						<a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
+					</li>
+
+					<li class="nav-item active">
+						<a class="nav-link" href="./Relatorio_LB_grupo_6.pdf">Relatório &nbsp &nbsp &nbsp</a>
 					</li>
 
 				</ul>
@@ -56,7 +56,6 @@
 	<br>
 	<br>
 	<br>
-
 	<center><h3>Alinhamento Múltiplo e Filogenia</h3></center>
 
 	<p>&nbsp &nbsp &nbsp O alinhamento múltiplo é importante pois permite analisar zonas de maior e menor conservação de forma a conseguir-se identificar domínios conservados. A filogenia é também de grande relevância uma vez que permite associar os diferentes organismos evolutivamente, ao analisar por exemplo a transferência horizontal de genes. A transferência horizontal de genes é o movimento de informação genética entre organismos que inclui a dispersão de resistência a antibióticos entre bactérias, contribuindo para a evolução evolutiva do patogénio.</p>
