--- a/domProteinas.html
+++ b/domProteinas.html
@@ -37,15 +37,15 @@
 					</li>
 
 					<li class="nav-item active">
-						<a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
-					</li>
-
-					<li class="nav-item active">
 						<a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
 					</li>
 					
 					<li class="nav-item active">
 						<a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
+					</li>
+
+					<li class="nav-item active">
+						<a class="nav-link" href="./Relatorio_LB_grupo_6.pdf">Relatório &nbsp &nbsp &nbsp</a>
 					</li>
 
 				</ul>
@@ -56,8 +56,6 @@
 	<br>
 	<br>
 	<br>
-	<br>
-
 	<center><h3>Domínios de proteínas</h3></center>
 
 	<p>&nbsp &nbsp &nbsp De forma a completar a informação acerca das funções das proteínas de interesse, recorreu-se à análise dos domínios dessas proteínas através da pesquisa na base de dados de domínios de proteínas NCBI CDD (conserved domain database). </p>
