--- a/motifseestrutura.html
+++ b/motifseestrutura.html
@@ -37,15 +37,15 @@
 					</li>
 
 					<li class="nav-item active">
-						<a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
-					</li>
-
-					<li class="nav-item active">
 						<a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
 					</li>
 					
 					<li class="nav-item active">
 						<a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
+					</li>
+
+					<li class="nav-item active">
+						<a class="nav-link" href="./Relatorio_LB_grupo_6.pdf">Relatório &nbsp &nbsp &nbsp</a>
 					</li>
 
 				</ul>
@@ -56,8 +56,6 @@
 	<br>
 	<br>
 	<br>
-	<br>
-	
 	<center><h3>Análise de motifs e estrutura das proteínas</h3></center>
 	
 	<p>	&nbsp &nbsp &nbsp Quanto a análise dos motifs das proteínas que se encontram na tabela após terem sido corridas individual e conjuntamente na base de dados da “ScanProsite” e após ter sido feito o seu BLAST podemos confirmar que os dados obtidos estão de acordo com os analisados anteriormente. Quanto à função esperada das proteínas também podemos inferir que está de acordo com as funções encontradas anteriormente uma vez que nestas proteínas podemos encontrar domínios conservados, quer sejam centros catalíticos, como o CMP/dCMP-type deaminase, zonas onde há a presença de elementos metálicos, nomeadamente o Zinco, ou zonas onde ocorre a ligação das proteínas em que a enzima vai atuar, como o Riboflavin synthase alpha chain lumazine-binding repeat profile(Figura 2).</p>
