--- a/regulacao.html
+++ b/regulacao.html
@@ -37,15 +37,15 @@
 					</li>
 
 					<li class="nav-item active">
-						<a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
-					</li>
-
-					<li class="nav-item active">
 						<a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
 					</li>
 					
 					<li class="nav-item active">
 						<a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
+					</li>
+
+					<li class="nav-item active">
+						<a class="nav-link" href="./Relatorio_LB_grupo_6.pdf">Relatório &nbsp &nbsp &nbsp</a>
 					</li>
 
 				</ul>
@@ -56,7 +56,6 @@
 	<br>
 	<br>
 	<br>
-
 	<center><h3> Regulação da via metabólica </h3></center>
 	<p>  &nbsp &nbsp &nbsp A riboflavina (ou vitamina B2) é um componente essencial da dieta humana e animal, uma vez que serve como precursor para 2 cofatores de flavina bastante importantes envolvidos no metabolismo oxidativo:  
   <ol>
