--- a/tabela.html
+++ b/tabela.html
@@ -37,15 +37,15 @@
 					</li>
 
 					<li class="nav-item active">
-						<a class="nav-link" href="./relatorio">Relatório &nbsp &nbsp &nbsp</a>
-					</li>
-
-					<li class="nav-item active">
 						<a class="nav-link" href="./tabela.html">Tabelas Resumo &nbsp &nbsp &nbsp</a>
 					</li>
 					
 					<li class="nav-item active">
 						<a class="nav-link" href="https://github.com/Hodor61/Laboratorios-de-Informatica/tree/master/scripts">Scripts &nbsp &nbsp &nbsp</a>
+					</li>
+
+					<li class="nav-item active">
+						<a class="nav-link" href="./Relatorio_LB_grupo_6.pdf">Relatório &nbsp &nbsp &nbsp</a>
 					</li>
 
 				</ul>
@@ -56,6 +56,7 @@
 	<br>
 	<br>
 	<br>
+	
 	<center><h3>Tabela Resumo</h3></center>
 	<br>
 
