Pequena correção css na index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Legionella pneumophila </title>
 
-  <link href="./website/css/bootstrap.css" rel="stylesheet">
+  <link href="./website/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 
