Correçao no link do alinhamento.py

--- a/alinhamento.html
+++ b/alinhamento.html
@@ -63,7 +63,7 @@
 	&nbsp &nbsp &nbsp Primeiramente começou-se por realizar um Blast (no NCBI) para cada uma das 5 sequências proteicas. Após os resultados, para cada um dos casos selecionaram-se 5 estirpes diferentes sendo que foram escolhidas as 5 estirpes com maior ident (o mais próximo de 100% possível) e menor e-value (o mais próximo de 0 possível), tendo em conta também o query cover. De seguida, acedeu-se à plataforma Clustal Omega que permite realizar o alinhamento múltiplo das sequências. Desta forma, procedeu-se ao alinhamento múltiplo de 5 sequências de cada vez, obtendo-se os resultados dos alinhamentos em formato Clustal e a informação para posterior criação da árvore em formato Newick. Através de Bioptyhon, utilizou-se a função Philo.read() que permite ler o ficheiro em formato newick e, também, a Philo.draw_ascii() que permite desenhar a árvore.
 	</p>
 
-	<p> &nbsp &nbsp &nbsp  <a href=".\scripts\Alinhamentos\Alinhamento.py"> Aqui </a> encontra-se o script que executa a alinhamento múltiplo.
+	<p> &nbsp &nbsp &nbsp  <a href=".\scripts\Alinhamentos\alinhamento.py"> Aqui </a> encontra-se o script que executa a alinhamento múltiplo.
 
 		De forma a poder executar o script corretamente, é necessário ter os seguintes ficheiros:
 		<ol>
